changed img src

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <img src="assets/img/logo/yrf-logo.png" alt="" class="yrffull px-4 d-sm-none d-md-none d-lg-block">
-          <img src="/Public/Images/Logo/Screenshot 2023-04-28 191225.png" class="d-sm-block d-md-block d-lg-none" alt="">
+          <img src="assets/img/yrf-logo.png" alt="" class="yrffull px-4 d-sm-none d-md-none d-lg-block">
+          <img src="assets/img/Screenshot 2023-04-28 191225.png" class="d-sm-block d-md-block d-lg-none" alt="">
           <div class="navhidden d-flex d-md-flex d-xl-none  d-sm-flex d-lg-none align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-search" viewBox="0 0 16 16">
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
