--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-search" viewBox="0 0 16 16">
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
               </svg>
-            <img src="/Public/Images/Logo/yrf-logo-2.png" alt="">
+            <img src="assets/img/yrf-logo-2.png" alt="">
           </div>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav  mb-2 mb-lg-0 mx-5">
@@ -92,7 +92,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-search" viewBox="0 0 16 16">
               <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
             </svg>
-          <img src="/Public/Images/Logo/yrf-logo-2.png" alt="">
+          <img src="assets/img/yrf-logo-2.png" alt="">
         </div>
       </nav>
   </header>
@@ -104,10 +104,10 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img src="Public/Images/carousal/Pathaan-Prime-Desktop.jpg" class="w-100 d-block" alt="First slide">
+        <img src="assets/img/carousal/Pathaan-Prime-Desktop.jpg" class="w-100 d-block" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img src="Public/Images/carousal/PathaanxTiger-HomePage_Desktop.jpg" class="w-100 d-block" alt="Second slide">
+        <img src="assets/img/carousal/PathaanxTiger-HomePage_Desktop.jpg" class="w-100 d-block" alt="Second slide">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
@@ -138,7 +138,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-md-3 mt-sm-2 mt-2 mt-lg-0">
         <div class="card">
-          <img class="card-img-top" src="/Public/Images/carousal/the-romantics---netflix5c58747b-5919-478c-b4ed-d1fef6e79fc8.jpg" alt="Title">  
+          <img class="card-img-top" src="assets/img/carousal/the-romantics---netflix5c58747b-5919-478c-b4ed-d1fef6e79fc8.jpg" alt="Title">  
           <div class="card-body">
             <p class="card-text">The Romantics | Official Trailer | Shah Rukh Khan, Salman Khan, Ranbir Kapoor | Netflix India</p>
           </div>
