img src changed

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div class="row">
       <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-md-3 mt-sm-2 mt-2 mt-lg-0">
         <div class="card">
-          <img class="card-img-top" src="/Public/Images/Logo/yfx-logo.jpg" alt="Title">
+          <img class="card-img-top" src="assets/img/yfx-logo.jpg" alt="Title">
           <div class="card-body">
             <p class="card-text">Pathaan x Tiger Theme | Shah Rukh Khan, Salman Khan | Sanchit, Ankit, Julius | YRF Spy Universe</p>
           </div>
@@ -176,7 +176,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-md-3 mt-sm-2 mt-2 mt-lg-0">
         <div class="card">
-          <img class="card-img-top" src="/Public/Images/mandala-murdersd1ea02e9-5c38-4ab9-840f-59a50f9ac8ca.jpg" alt="Title">
+          <img class="card-img-top" src="assets/img/mandala-murdersd1ea02e9-5c38-4ab9-840f-59a50f9ac8ca.jpg" alt="Title">
           <div class="card-body">
             <p class="card-text">The Romantics | Official Trailer | Shah Rukh Khan, Salman Khan, Ranbir Kapoor | Netflix India</p>
           </div>
@@ -184,7 +184,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-md-3 mt-sm-2 mt-2 mt-lg-0">
         <div class="card">
-          <img class="card-img-top" src="/Public/Images/sui-dhaaga---release-in-china.jpg" alt="Title">
+          <img class="card-img-top" src="assets/img/sui-dhaaga---release-in-china.jpg" alt="Title">
           <div class="card-body">
             <p class="card-text">Making of Besharam Rang Song | Pathaan | Shah Rukh Khan | Deepika Padukone | Siddharth Anand</p>
           </div>
@@ -192,7 +192,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 mt-md-3 mt-sm-2 mt-2 mt-lg-0">
         <div class="card">
-          <img class="card-img-top" src="Public/Images/carousal/the-romantics---netflix5c58747b-5919-478c-b4ed-d1fef6e79fc8.jpg" alt="Title">
+          <img class="card-img-top" src="assets/img/carousal/the-romantics---netflix5c58747b-5919-478c-b4ed-d1fef6e79fc8.jpg" alt="Title">
           <div class="card-body">
             <p class="card-text">Pathaan x Tiger Theme | Shah Rukh Khan, Salman Khan | Sanchit, Ankit, Julius | YRF Spy Universe</p>
           </div>
@@ -225,7 +225,7 @@
             <i class="fa fa-youtube-play" style="color:white;"></i><span style="font-size: 15px;align-items: center;padding-bottom: .5rem;">YouTube</span>
           </div>
           <div class="h6 px-2 text-center" style="padding-top: .2rem;">
-            <span style="font-size: 11px;align-items: center;#737373;">53M</span>
+            <span style="font-size: 11px;align-items: center;color: #737373;">53M</span>
           </div>
         </button>
       </div>
@@ -250,7 +250,7 @@
           <li><span class="fonted">y</span>FX STUDIOS</li>
           <li><span class="fonted">y</span>rf ENTERTAINMENT</li>
           <li>YASH CHOPRA FOUNTATION</li>
-          <li class="d-lg-none d-md-none d-sm-block my-3"><img src="/Public/Images/Logo/yrf-50-years-logo.png" alt=""></li>
+          <li class="d-lg-none d-md-none d-sm-block my-3"><img src="assets/img/yrf-50-years-logo.png" alt=""></li>
         </ul>
       </div>
       <div class="col-6 d-lg-flex d-md-flex d-sm-none d-none justify-content-between">
@@ -275,7 +275,7 @@
           <li>&nbsp;</li>
           <li>&nbsp;</li>
           <li class="text-end">
-            <img src="/Public/Images/Logo/yrf-50-years-logo.png" alt="">
+            <img src="assets/img/yrf-50-years-logo.png" alt="">
           </li>
           <li>&nbsp;</li>
           <li class="listlogo d-flex text-light text-end">
